# template-command-asdf-poetry-python

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  main.sh  ops.yml  pyproject.toml
